Develop (#36)
* feat: implement backend base infrastructure (#1)

- Configure PostgreSQL and HikariCP pool
- Setup Flyway migrations support
- Implement Global Exception Handler with @ControllerAdvice
- Add standardized API response DTOs
- Configure structured logging for production profiles
# Conflicts:
#	.classpath
#	.factorypath
#	.settings/org.eclipse.core.resources.prefs
#	.settings/org.eclipse.jdt.core.prefs
#	pom.xml
#	src/main/java/com/smartwallet/aspect/LoggingAspect.java
#	src/main/resources/application.yaml
#	src/main/resources/db/migration/V1__initial_schema.sql

* CARTEIRA DE INVESTIMENTOS: (#5)

- CRUD completo de ativos
- Validação de dados (ticker, valores)
- Histórico de operações (compra/venda)
- Cálculo de preço médio
- Cálculo de lucro/prejuízo real
- Agrupamento por tipo (ações, FIIs, etc.)

* INTEGRAÇÃO OPEN FINANCE: (#10)

- Implementar OAuth2 com bancos
- Conectar contas (Nubank, etc.)
- Importar transações automaticamente
- Classificar transações
- Converter em ativos

* FRONTEND COMPLETO: (#12)

- Login funcional com JWT
- Dashboard dinâmico
- CRUD de ativos
- Integração com backend
- Tela de IA (análises)
- Sistema de loading e erros
- Responsividade total

* GRÁFICOS E VISUALIZAÇÃO: (#13)

- Gráfico de distribuição (Asset Allocation)
- Gráfico de evolução patrimonial (Time Series)
- Indicadores de performance (Yield on Cost, Sharpe)
- Comparação com benchmark (IPCA, CDI, IBOV)

* Feature/sistema saas planos (#14)

* SISTEMA SaaS:
- Estrutura de Planos (Free, Premium, Enterprise)
- Controle de acesso por plano (Spring Security)
- Limitação de funcionalidades (Ex: limite de ativos no Free)
- Backend validando permissões em cada Request

* SISTEMA SaaS:
- Estrutura de Planos (Free, Premium, Enterprise)
- Controle de acesso por plano (Spring Security)
- Limitação de funcionalidades (Ex: limite de ativos no Free)
- Backend validando permissões em cada Request

* PERFORMANCE E ESCALA: (#16)

- Implementação de Cache (Redis) para cotações e perf